--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <meta content="utf-8" http-equiv="encoding">
 <title>Cisco type 7</title>
 <style>
+body {
+    background-color: #3b3b3b;
+    color: #eeeeee;
+    font-size: 1.5em;
+    font-family: sans-serif;
+}
 </style>
 </head>
 
